fixed wierd overflow movement

--- a/src/components/NFT/style.module.css
+++ b/src/components/NFT/style.module.css
@@ -1,6 +1,6 @@
 .container{
     display: flex;
-    overflow-x: hidden;
+    overflow: hidden;
     width: 100%;
     align-content: center;
     flex-wrap: wrap;
