--- a/src/style.module.css
+++ b/src/style.module.css
@@ -1,7 +1,7 @@
 .main_container{
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .half_banner{
